feat: Header Animation 추가 및 Git Projects 테스트 close #10

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,3 +12,32 @@
     @apply h-full;
   }
 }
+
+@layer components {
+  .hover-underline-animation {
+    display: inline-block;
+    position: relative;
+  }
+
+  .hover-underline-animation::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 2px;
+    bottom: -4px;
+    left: 0;
+    background-color: #fff;
+    transform-origin: bottom right;
+    transition: transform 0.2s ease-out;
+  }
+
+  .hover-underline-animation:hover::after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
+  }
+
+  .hover-underline-animation.active::after {
+    transform: scaleX(1);
+  }
+}
