--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,11 +5,16 @@
 @layer base {
   body {
     @apply text-[#f5f5f5];
-    @apply text-xs;
-    @apply h-[3000px];
+    @apply text-sm;
+    @apply h-screen;
+    @apply select-none;
+    @apply relative;
+    @apply bg-black;
+    -webkit-user-drag: none;
   }
   main {
-    @apply h-full;
+    @apply h-auto;
+    @apply relative;
   }
 }
 
