--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,11 +6,10 @@
   body {
     @apply text-[#f5f5f5];
     @apply text-sm;
-    @apply h-screen;
+
     @apply select-none;
     @apply relative;
     @apply bg-black;
-    -webkit-user-drag: none;
   }
   main {
     @apply h-auto;
@@ -19,6 +18,9 @@
 }
 
 @layer components {
+  .react-rotating-text > span {
+    font-weight: 400;
+  }
   .hover-underline-animation {
     display: inline-block;
     position: relative;
