--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,12 @@
 }
 
 @layer components {
+  .stopScroll {
+    position: fixed;
+    overflow-y: scroll;
+    width: 100%;
+  }
+
   .react-rotating-text > span {
     font-weight: 400;
   }
@@ -46,5 +52,44 @@
 
   .hover-underline-animation.active::after {
     transform: scaleX(1);
+  }
+
+  .search-wrap {
+    width: 100%;
+    position: absolute;
+    top: 9px;
+    left: 0;
+    transition: 0.4s;
+    margin: auto 0;
+    height: 48px;
+    visibility: hidden;
+    opacity: 0;
+    /* visibility: visible;
+    opacity: 1; */
+  }
+  .search {
+    max-width: 768px;
+    margin: 0 auto;
+    position: relative;
+  }
+  .search .shadow {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    position: fixed;
+    top: 0;
+    left: 0;
+  }
+
+  .textfield {
+    position: relative;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+
+  .search-canceler {
+    display: block;
+    width: 30px;
   }
 }
