--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,6 +54,10 @@
     transform: scaleX(1);
   }
 
+  .header-wrap {
+    transition: 0.8s;
+  }
+
   .search-wrap {
     width: 100%;
     position: absolute;
@@ -64,8 +68,6 @@
     height: 48px;
     visibility: hidden;
     opacity: 0;
-    /* visibility: visible;
-    opacity: 1; */
   }
   .search {
     max-width: 768px;
