--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,12 +4,13 @@
 
 @layer base {
   body {
-    @apply text-[#f5f5f5];
     @apply text-sm;
-
     @apply select-none;
     @apply relative;
-    @apply bg-black;
+    @apply bg-white;
+    @apply text-black;
+    @apply dark:bg-black;
+    @apply dark:text-white;
   }
   main {
     @apply h-auto;
@@ -33,14 +34,13 @@
   }
 
   .hover-underline-animation::after {
-    content: "";
+    content: '';
     position: absolute;
     width: 100%;
     transform: scaleX(0);
     height: 2px;
     bottom: -4px;
     left: 0;
-    background-color: #fff;
     transform-origin: bottom right;
     transition: transform 0.2s ease-out;
   }
