--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -90,8 +90,66 @@
     gap: 10px;
   }
 
-  .search-canceler {
+  /* 반응형 메뉴 */
+  header::before {
+    content: '';
+    position: fixed;
+    top: 48px;
+    left: 0;
+    width: 100%;
+    height: 0;
+  }
+  header .clone-menu {
     display: block;
-    width: 30px;
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    top: 90px;
+    left: 0;
+    width: 100%;
+    padding: 0 20px;
+    box-sizing: border-box;
+    transition: 0.4s;
+    transform: translate(0, -50px);
+  }
+  header.menuing .clone-menu {
+    transform: translate(0, 0);
+    visibility: visible;
+    opacity: 1;
+  }
+  header ul.menu > li {
+    display: none;
+  }
+  header.menuing {
+    background-color: #fff;
+  }
+  header.menuing::before {
+    height: 100vh;
+    background-color: #fff;
+  }
+
+  header ul.menu > li {
+    display: flex;
+    position: relative;
+    cursor: pointer;
+    transition: 0.4s;
+  }
+
+  .menu-starter span {
+    display: block;
+    width: 15px;
+    height: 1px;
+    margin-bottom: 6px;
+    transition: 0.4s;
+    background-color: #000;
+  }
+  .menu-starter span:last-child {
+    margin-bottom: 0;
+  }
+  .menu-starting span:first-child {
+    transform: translate(0, 3.5px) rotate(45deg);
+  }
+  .menu-starting span:last-child {
+    transform: translate(0, -3.5px) rotate(-45deg);
   }
 }
